--- a/package.json
+++ b/package.json
@@ -42,6 +42,17 @@
         "build:types": "npx tsc -p tsconfig.types.json",
         "test": "npx tailwindcss -c ./test/tailwind.config.ts -i ./test/index.css -o ./test/output.css"
     },
+    "prettier": {
+        "plugins": [
+            "prettier-plugin-jsdoc",
+            "prettier-plugin-tailwindcss"
+        ],
+        "printWidth": 100,
+        "proseWrap": "always",
+        "semi": false,
+        "tabWidth": 4,
+        "trailingComma": "none"
+    },
     "eslintConfig": {
         "parser": "@typescript-eslint/parser",
         "parserOptions": {
@@ -177,5 +188,10 @@
         "rollup": "^4.9.1",
         "tailwindcss": "^3.4.0",
         "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "prettier": "^3.1.1",
+        "prettier-plugin-jsdoc": "^1.3.0",
+        "prettier-plugin-tailwindcss": "^0.5.10"
     }
 }
