--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tailwindcss-preset-blueprintjs",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "A preset for Tailwind CSS to load colors, shadows, fonts, and transitions from BlueprintJS.",
     "keywords": [
         "tailwindcss",
@@ -17,181 +17,34 @@
     "license": "Apache-2.0",
     "author": "Josh Harris",
     "type": "module",
-    "exports": {
-        "./bp5": {
-            "types": "./dist/types/bp5/index.d.ts",
-            "import": "./dist/esm/bp5/index.js",
-            "require": "./dist/cjs/bp5/index.js",
-            "default": "./dist/esm/bp5/index.js"
-        },
-        "./bp5/blueprint": {
-            "types": "./dist/types/bp5/blueprint.d.ts",
-            "import": "./dist/esm/bp5/blueprint.js",
-            "require": "./dist/cjs/bp5/blueprint.js",
-            "default": "./dist/esm/bp5/blueprint.js"
-        }
-    },
-    "main": "./dist/cjs/bp5/index.js",
-    "module": "./dist/esm/bp5/index.js",
+    "main": "./dist/index.umd.cjs",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist/"
     ],
     "scripts": {
-        "build": "npm run build:js && npm run build:types",
-        "build:js": "npx rollup --config rollup.config.js",
-        "build:types": "npx tsc -p tsconfig.types.json",
-        "test": "npx tailwindcss -c ./test/tailwind.config.ts -i ./test/index.css -o ./test/output.css"
-    },
-    "prettier": {
-        "plugins": [
-            "prettier-plugin-jsdoc",
-            "prettier-plugin-tailwindcss"
-        ],
-        "printWidth": 100,
-        "proseWrap": "always",
-        "semi": false,
-        "tabWidth": 4,
-        "trailingComma": "none"
-    },
-    "eslintConfig": {
-        "parser": "@typescript-eslint/parser",
-        "parserOptions": {
-            "ecmaVersion": "latest",
-            "project": "./tsconfig.json",
-            "sourceType": "module"
-        },
-        "settings": {
-            "import/parsers": {
-                "@typescript-eslint/parser": [
-                    ".ts"
-                ]
-            },
-            "import/resolver": {
-                "typescript": {
-                    "alwaysTryTypes": true,
-                    "project": "./tsconfig.json"
-                }
-            }
-        },
-        "plugins": [
-            "import",
-            "@typescript-eslint"
-        ],
-        "extends": [
-            "eslint:recommended",
-            "plugin:@typescript-eslint/recommended",
-            "plugin:@typescript-eslint/strict-type-checked",
-            "plugin:@typescript-eslint/stylistic-type-checked",
-            "airbnb-base",
-            "airbnb-typescript-base",
-            "prettier"
-        ],
-        "rules": {
-            "implicit-arrow-linebreak": "off",
-            "no-duplicate-imports": "off",
-            "no-underscore-dangle": "off",
-            "no-unused-vars": "off",
-            "@typescript-eslint/naming-convention": [
-                "warn",
-                {
-                    "selector": "default",
-                    "format": [
-                        "camelCase"
-                    ],
-                    "leadingUnderscore": "allow",
-                    "trailingUnderscore": "allow"
-                },
-                {
-                    "selector": "import",
-                    "format": [
-                        "camelCase",
-                        "PascalCase"
-                    ]
-                },
-                {
-                    "selector": "variable",
-                    "format": [
-                        "camelCase",
-                        "UPPER_CASE",
-                        "PascalCase"
-                    ],
-                    "leadingUnderscore": "allow",
-                    "trailingUnderscore": "allow"
-                },
-                {
-                    "selector": "typeLike",
-                    "format": [
-                        "PascalCase"
-                    ],
-                    "leadingUnderscore": "allow"
-                },
-                {
-                    "selector": [
-                        "objectLiteralMethod",
-                        "objectLiteralProperty",
-                        "classMethod",
-                        "classProperty"
-                    ],
-                    "format": [
-                        "camelCase"
-                    ],
-                    "trailingUnderscore": "allow"
-                },
-                {
-                    "selector": "enum",
-                    "format": [
-                        "PascalCase"
-                    ]
-                },
-                {
-                    "selector": "enumMember",
-                    "format": [
-                        "UPPER_CASE"
-                    ]
-                }
-            ],
-            "@typescript-eslint/no-non-null-assertion": "off",
-            "@typescript-eslint/no-shadow": [
-                "warn",
-                {
-                    "allow": [
-                        "_"
-                    ]
-                }
-            ],
-            "@typescript-eslint/no-unused-vars": "off",
-            "@typescript-eslint/no-use-before-define": "off",
-            "import/no-duplicates": "off",
-            "import/order": "off",
-            "import/prefer-default-export": "off"
-        },
-        "ignorePatterns": [
-            "dist",
-            "test",
-            "rollup.config.js"
-        ],
-        "root": true
+        "build": "tsc && vite build",
+        "dev": "vite",
+        "preview": "vite preview",
+        "test": "tailwindcss -c ./test/tailwind.config.ts -i ./test/index.css -o ./test/output.css"
     },
     "devDependencies": {
-        "@blueprintjs/core": "^5.7.2",
-        "@rollup/plugin-node-resolve": "^15.2.3",
-        "@rollup/plugin-typescript": "^11.1.5",
-        "@types/node": "^20.10.5",
-        "@typescript-eslint/eslint-plugin": "^6.16.0",
-        "@typescript-eslint/parser": "^6.16.0",
+        "@blueprintjs/core": "^5.8.2",
+        "@rollup/plugin-typescript": "^11.1.6",
+        "@typescript-eslint/eslint-plugin": "^6.18.1",
+        "@typescript-eslint/parser": "^6.18.1",
         "eslint": "^8.56.0",
-        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript-base": "^5.0.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
-        "rollup": "^4.9.1",
-        "tailwindcss": "^3.4.0",
-        "typescript": "^5.3.3"
-    },
-    "dependencies": {
-        "prettier": "^3.1.1",
+        "prettier": "^3.2.2",
         "prettier-plugin-jsdoc": "^1.3.0",
-        "prettier-plugin-tailwindcss": "^0.5.10"
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.8",
+        "vite-plugin-dts": "^3.7.0"
     }
 }
