--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,48 +1,44 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "project": "./tsconfig.json",
-        "sourceType": "module"
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "project": "./tsconfig.json",
+    "sourceType": "module"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts"]
     },
-    "settings": {
-        "import/parsers": {
-            "@typescript-eslint/parser": [".ts"]
-        },
-        "import/resolver": {
-            "typescript": {
-                "alwaysTryTypes": true,
-                "project": "./tsconfig.json"
-            }
-        }
-    },
-    "plugins": ["import", "@typescript-eslint"],
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/strict-type-checked",
-        "plugin:@typescript-eslint/stylistic-type-checked",
-        "airbnb-typescript-base",
-        "prettier"
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./tsconfig.json"
+      }
+    }
+  },
+  "plugins": ["import", "@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/strict-type-checked",
+    "plugin:@typescript-eslint/stylistic-type-checked",
+    "airbnb-base",
+    "airbnb-typescript-base",
+    "prettier"
+  ],
+  "rules": {
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-shadow": [
+      "warn",
+      {
+        "allow": ["_"]
+      }
     ],
-    "rules": {
-        "@typescript-eslint/no-non-null-assertion": "off",
-        "@typescript-eslint/no-shadow": [
-            "warn",
-            {
-                "allow": ["_"]
-            }
-        ],
-        "@typescript-eslint/no-use-before-define": "off",
-        "import/no-duplicates": "off",
-        "import/order": "off",
-        "import/prefer-default-export": "off",
-        "no-duplicate-imports": "off"
-    },
-    "ignorePatterns": [
-        "node_modules",
-        "dist",
-        "vite.config.ts",
-        "eslint.config.js",
-        "prettier.config.js"
-    ]
+    "@typescript-eslint/no-use-before-define": "off",
+    "import/no-duplicates": "off",
+    "import/order": "off",
+    "import/prefer-default-export": "off",
+    "no-duplicate-imports": "off",
+    "no-restricted-syntax": "off"
+  },
+  "ignorePatterns": ["node_modules", "dist", "prettier.config.js"]
 }
