--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     },
     "devDependencies": {
         "@blueprintjs/core": "^5.8.2",
-        "@rollup/plugin-typescript": "^11.1.6",
+        "@types/node": "^20.11.24",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
         "eslint": "^8.56.0",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-airbnb-typescript-base": "^5.0.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-import-resolver-typescript": "^3.6.1",
@@ -43,8 +44,6 @@
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-tailwindcss": "^0.5.11",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5.2.2",
-        "vite": "^5.0.8",
-        "vite-plugin-dts": "^3.7.0"
+        "typescript": "^5.5.4"
     }
 }
