--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "prettier": "^3.2.2",
         "prettier-plugin-jsdoc": "^1.3.0",
         "prettier-plugin-tailwindcss": "^0.5.11",
+        "rimraf": "^6.0.1",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.5.4"
     }
