--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-    "name": "tailwindcss-preset-blueprintjs",
-    "version": "1.0.4",
-    "description": "A preset for Tailwind CSS to load colors, shadows, fonts, and transitions from BlueprintJS.",
-    "keywords": [
-        "tailwindcss",
-        "blueprintjs"
-    ],
-    "homepage": "https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs#readme",
-    "bugs": {
-        "url": "https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs.git"
-    },
-    "license": "Apache-2.0",
-    "author": "Josh Harris",
-    "type": "module",
-    "main": "./dist/index.umd.cjs",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts",
-    "files": [
-        "dist/"
-    ],
-    "scripts": {
-        "build": "tsc && vite build",
-        "dev": "vite",
-        "preview": "vite preview",
-        "test": "tailwindcss -c ./test/tailwind.config.ts -i ./test/index.css -o ./test/output.css"
-    },
-    "devDependencies": {
-        "@blueprintjs/core": "^5.8.2",
-        "@types/node": "^20.11.24",
-        "@typescript-eslint/eslint-plugin": "^6.18.1",
-        "@typescript-eslint/parser": "^6.18.1",
-        "eslint": "^8.56.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-airbnb-typescript-base": "^5.0.1",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-import-resolver-typescript": "^3.6.1",
-        "eslint-plugin-import": "^2.29.1",
-        "prettier": "^3.2.2",
-        "prettier-plugin-jsdoc": "^1.3.0",
-        "prettier-plugin-tailwindcss": "^0.5.11",
-        "rimraf": "^6.0.1",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.5.4"
-    }
+  "name": "tailwindcss-preset-blueprintjs",
+  "version": "1.0.5",
+  "description": "A preset for Tailwind CSS to load colors, shadows, fonts, and transitions from BlueprintJS.",
+  "keywords": [
+    "tailwindcss",
+    "blueprintjs"
+  ],
+  "homepage": "https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs#readme",
+  "bugs": {
+    "url": "https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs.git"
+  },
+  "license": "Apache-2.0",
+  "author": "Josh Harris",
+  "type": "module",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
+  "scripts": {
+    "build": "npm run clean && npm run create && npm run build-esm && npm run build-umd && npm run build-dts",
+    "build-dts": "tsc -p tsconfig.dts.json",
+    "build-esm": "tsc -p tsconfig.esm.json",
+    "build-umd": "tsc -p tsconfig.umd.json",
+    "clean": "rimraf ./src/output/* --glob && rimraf ./dist/* --glob",
+    "create": "tsx ./src/configs/blueprint.ts",
+    "test": "tailwindcss -c ./test/tailwind.config.ts -i ./test/index.css -o ./test/output.css"
+  },
+  "devDependencies": {
+    "@blueprintjs/core": "^5.11.0",
+    "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript-base": "^5.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.2.2",
+    "prettier-plugin-jsdoc": "^1.3.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.16.5",
+    "typescript": "^5.5.4"
+  }
 }
