--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -5,5 +5,6 @@
     "declarationMap": true,
     "emitDeclarationOnly": true,
     "declarationDir": "./dist/dts"
-  }
+  },
+  "include": ["./src/index.ts"]
 }
