--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "license": "Apache-2.0",
   "author": "Josh Harris",
   "type": "module",
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/umd/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/dts/index.d.ts",
   "files": [
     "dist/"
   ],
