--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailwindcss-preset-blueprintjs",
-  "version": "1.1.0",
-  "description": "A preset for Tailwind CSS to load colors, shadows, fonts, and transitions from BlueprintJS.",
+  "version": "1.2.0",
+  "description": "A preset for Tailwind CSS to load colors, spacing, shadows, fonts, and transitions from BlueprintJS.",
   "keywords": [
     "tailwindcss",
     "blueprintjs"
@@ -14,41 +14,43 @@
     "type": "git",
     "url": "git+https://github.com/jdharrisnz/tailwindcss-preset-blueprintjs.git"
   },
-  "license": "Apache-2.0",
-  "author": "Josh Harris",
+  "license": "MIT",
+  "author": "Joshua Harris",
   "type": "module",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/dts/index.d.ts",
   "files": [
-    "dist/"
+    "dist",
+    "src"
   ],
   "scripts": {
-    "build": "npm run clean && npm run create && npm run build-esm && npm run build-umd && npm run build-dts",
+    "build": "pnpm clean && pnpm run create && pnpm build-esm && pnpm build-umd && pnpm build-dts",
     "build-dts": "tsc -p tsconfig.dts.json",
     "build-esm": "tsc -p tsconfig.esm.json",
     "build-umd": "tsc -p tsconfig.umd.json",
-    "clean": "rimraf ./src/output/* --glob && rimraf ./dist/* --glob",
-    "create": "tsx ./src/configs/blueprint.ts",
-    "test": "tailwindcss -c ./test/tailwind.config.ts -i ./test/index.css -o ./test/output.css"
+    "clean": "rimraf --glob ./src/output/* && rimraf --glob ./dist/* ",
+    "create": "node ./src/configs/blueprint.ts",
+    "preinstall": "npx only-allow pnpm",
+    "test": "npx tailwindcss -i ./test/index.css -o ./test/output.css"
   },
   "devDependencies": {
-    "@blueprintjs/core": "^5.11.0",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript-base": "^5.0.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "prettier": "^3.2.2",
-    "prettier-plugin-jsdoc": "^1.3.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "@blueprintjs/colors": "^5.1.5",
+    "@blueprintjs/core": "^5.16.4",
+    "@eslint/js": "^9.19.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@tailwindcss/cli": "^4.0.3",
+    "@types/node": "^22.13.1",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "globals": "^15.14.0",
+    "node": "^23.7.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-jsdoc": "^1.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.16.5",
-    "typescript": "^5.5.4"
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0"
   }
 }
